--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <script src="js/jquery-3.3.1.slim.min.js"></script>
         <link rel="stylesheet" type="text/css" href="ecss/contact.css">
         <!------ Include the above in your HEAD tag ---------->
-        <title>Acerca</title>
+        <title>LALALA</title>
     </head>
 	<body>
 		<header class="header2">
